--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -53,7 +53,8 @@
                 android:id="@+id/searchText"
                 android:layout_weight="1" />
 
-            <Button
+            <com.chocoroll.ourcompay.Model.MTextView
+                android:clickable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="검색"
