--- a/app/src/main/res/layout/fragment_mylist.xml
+++ b/app/src/main/res/layout/fragment_mylist.xml
@@ -8,7 +8,7 @@
     >
 
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -30,7 +30,7 @@
         android:orientation="vertical" >
     </LinearLayout>
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
