--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -31,7 +31,7 @@
             android:layout_toRightOf="@+id/comLogo"
             android:layout_toEndOf="@+id/comLogo">
 
-            <TextView
+            <com.chocoroll.ourcompay.Model.MTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
@@ -49,8 +49,8 @@
 
         </LinearLayout>
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
+        <com.chocoroll.ourcompay.Model.MTextView
+            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="즐겨찾기"
