--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
@@ -38,7 +38,8 @@
     </LinearLayout>
 
 
-    <Button
+    <com.chocoroll.ourcompay.Model.MTextView
+        android:clickable="true"
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:text="비밀번호찾기"
