--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -13,7 +13,7 @@ android:orientation="horizontal"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
 
-<TextView
+<com.chocoroll.ourcompay.Model.MTextView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -34,7 +34,7 @@ android:orientation="horizontal"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
 
-<TextView
+<com.chocoroll.ourcompay.Model.MTextView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -56,7 +56,7 @@ android:orientation="horizontal"
 android:layout_width="match_parent"
 android:layout_height="wrap_content">
 
-<TextView
+<com.chocoroll.ourcompay.Model.MTextView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceMedium"
@@ -76,13 +76,14 @@ android:layout_height="wrap_content">
 
 
 
-<Button
-android:layout_width="150dp"
-android:layout_height="50dp"
-android:text="회원가입"
-android:id="@+id/btnregister"
-android:layout_gravity="center_horizontal"
-android:layout_marginTop="50dp"/>
+<com.chocoroll.ourcompay.Model.MTextView
+    android:clickable="true"
+    android:layout_width="150dp"
+    android:layout_height="50dp"
+    android:text="회원가입"
+    android:id="@+id/btnregister"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginTop="50dp"/>
 
 
 
