--- a/app/src/main/res/layout/dialog_answer_list.xml
+++ b/app/src/main/res/layout/dialog_answer_list.xml
@@ -39,7 +39,8 @@
                 android:inputType="textMultiLine"
                 android:typeface="sans" />
 
-            <Button
+            <com.chocoroll.ourcompay.Model.MTextView
+                android:clickable="true"
                 android:id="@+id/answer_ok"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
