--- a/app/src/main/res/layout/fragment_my_apply.xml
+++ b/app/src/main/res/layout/fragment_my_apply.xml
@@ -31,7 +31,7 @@
                 android:background="@null"
                 android:id="@+id/m_preMonthBtn" />
 
-            <TextView
+            <com.chocoroll.ourcompay.Model.MTextView
                 android:id="@+id/m_yearTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
                 android:textSize="20dp"
                 android:typeface="sans" />
 
-            <TextView
+            <com.chocoroll.ourcompay.Model.MTextView
                 android:id="@+id/m_mothTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
