--- a/app/src/main/res/layout/fragment_qna.xml
+++ b/app/src/main/res/layout/fragment_qna.xml
@@ -19,7 +19,8 @@
             android:id="@+id/edit_qna"
             android:layout_gravity="center_horizontal" />
 
-        <Button
+        <com.chocoroll.ourcompay.Model.MTextView
+            android:clickable="true"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
