--- a/app/src/main/res/layout/model_company.xml
+++ b/app/src/main/res/layout/model_company.xml
@@ -11,7 +11,7 @@
         android:layout_height="50dp"
         android:id="@+id/companyLogo" />
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_marginLeft="10dp"
         android:textColor="#000000"
         android:textSize="20dp"
