--- a/app/src/main/res/layout/model_company_change.xml
+++ b/app/src/main/res/layout/model_company_change.xml
@@ -11,7 +11,7 @@
         android:layout_height="50dp"
         android:id="@+id/companyLogo" />
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_marginLeft="10dp"
         android:textColor="#000000"
         android:textSize="20dp"
@@ -20,13 +20,15 @@
         android:text="회사이름"
         android:id="@+id/companyName" />
 
-    <Button
+    <com.chocoroll.ourcompay.Model.MTextView
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="승인"
         android:id="@+id/btnOK" />
 
-    <Button
+    <com.chocoroll.ourcompay.Model.MTextView
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="거절"
