--- a/app/src/main/res/layout/model_qna.xml
+++ b/app/src/main/res/layout/model_qna.xml
@@ -12,14 +12,14 @@
         android:padding="5dp"
         android:layout_gravity="center_horizontal">
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="아이디"
             android:id="@+id/qna_id"
             android:layout_gravity="center_horizontal" />
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="날짜"
@@ -42,7 +42,7 @@
         android:orientation="horizontal"
         android:padding="5dp">
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:padding="5dp"
             android:gravity="center"
             android:layout_weight="3"
@@ -52,7 +52,8 @@
             android:id="@+id/qna_content" />
 
 
-            <Button
+            <com.chocoroll.ourcompay.Model.MTextView
+                android:clickable="true"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_weight="1"
                 android:layout_width="0dp"
