--- a/app/src/main/res/layout/model_report_list.xml
+++ b/app/src/main/res/layout/model_report_list.xml
@@ -7,7 +7,7 @@
     android:layout_margin="2dp"
     >
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:id="@+id/content_date"
         android:padding="4dp"
         android:layout_width="70dp"
@@ -15,7 +15,7 @@
         android:text = "15/04/02"
         android:gravity="center"/>
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:id="@+id/content_com"
         android:padding="4dp"
         android:layout_marginLeft="4dp"
@@ -24,7 +24,7 @@
         android:text = "카카오톡"
         android:gravity="center"/>
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:id = "@+id/content_title"
         android:layout_marginLeft="4dp"
         android:padding="4dp"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:text = "카카오톡 답사 후기입니다."/>
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:id = "@+id/content_recount"
         android:layout_width="40dp"
         android:gravity="center"
