--- a/app/src/main/res/layout/model_reserve_apply.xml
+++ b/app/src/main/res/layout/model_reserve_apply.xml
@@ -7,19 +7,20 @@
     android:padding="10dp">
 
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/comName" />
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/reserveDate" />
 
-    <Button
+    <com.chocoroll.ourcompay.Model.MTextView
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Button"
