--- a/app/src/main/res/layout/oneday.xml
+++ b/app/src/main/res/layout/oneday.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:id="@+id/onday_dayTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         
     </LinearLayout>
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:id="@+id/onday_msgTv"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
