--- a/app/src/main/res/layout/slide_menu_company.xml
+++ b/app/src/main/res/layout/slide_menu_company.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
 
-    <TextView
+    <com.chocoroll.ourcompay.Model.MTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="안녕하세요 유저님~"
@@ -33,7 +33,7 @@
             android:src="@drawable/left_menu" />
 
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -64,7 +64,7 @@
             android:src="@drawable/left_menu" />
 
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -98,7 +98,7 @@
             android:src="@drawable/left_menu" />
 
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -132,7 +132,7 @@
             android:src="@drawable/left_menu" />
 
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -164,7 +164,7 @@
             android:src="@drawable/left_menu" />
 
 
-        <TextView
+        <com.chocoroll.ourcompay.Model.MTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
