--- a/app/src/main/res/layout/fragment_report_detail.xml
+++ b/app/src/main/res/layout/fragment_report_detail.xml
@@ -281,7 +281,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="댓글보기(0)"
-            android:id="@+id/textView"
+            android:id="@+id/report_reply_count"
             android:textSize="15dp"/>
     </LinearLayout>
 
